Fixed cookies notification z-index

--- a/UI/sections/HomeIntro/styles.module.scss
+++ b/UI/sections/HomeIntro/styles.module.scss
@@ -2,7 +2,6 @@
 
 .intro {
   position: relative;
-  z-index: 3;
   width: 100%;
   min-height: 100vh;
   background: $gray900;
