--- a/components/Common/CookiesNotification/styles.module.scss
+++ b/components/Common/CookiesNotification/styles.module.scss
@@ -9,7 +9,7 @@
   position: fixed;
   inset: 89px 0 auto;
   padding: 16px;
-  z-index: 999999;
+  z-index: 1;
   margin: 0 auto;
   transition:
     transform ease-in-out 0.3s,
